--- a/07 node.js/jwt_practice/package.json
+++ b/07 node.js/jwt_practice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cookie_session_jwt",
+  "name": "jwt_practice",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
@@ -11,9 +11,10 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.9.0",
-    "cookie-parser": "^1.4.7",
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.9.0"
   }
