--- a/09 react/weather-app/package.json
+++ b/09 react/weather-app/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.81.5",
     "dotenv": "^17.0.0",
+    "openweathermap-ts": "^1.2.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-select": "^5.10.1",
