--- a/09 react/weather-app/package.json
+++ b/09 react/weather-app/package.json
@@ -15,6 +15,7 @@
     "openweathermap-ts": "^1.2.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3",
     "react-select": "^5.10.1",
     "styled-components": "^6.1.19"
   },
